# arduino-led-interface-rtdb

./: CMakeLists.txt  README.md  arduino-led-interface.cbp  startLEDStrip.sh
Arduino/LEDStrip/: LEDStrip.ino
Arduino/LEDStrip-backup-before-emergency-stop/: LEDStrip-backup-before-emergency-stop.ino
InterfaceLEDStrip/: .gitignore  CMakeLists.txt  InterfaceLEDStrip.cbp  README.md  RS232.cpp  RS232.h  arduino.cpp  arduino.h  arduino_config.h  code_snippets.txt  main.cpp  main.h  old-main.cpp  old_main.cpp  test_interface_main.cpp
PatternGenerator/: CMakeLists.txt  PatternGenerator.cbp  PatternGenerator.cpp  PatternGenerator.h  README.md  main.cpp  main_battery_state.cpp  main_emergency_state.cpp  main_laser.cpp  main_movement_state.cpp  old_main.cpp  old_main_laser.cpp  reference_main_laser.cpp
arch/rtdbobjects/: ArduinoData.cpp  ArduinoData.h  CMakeLists.txt
scripts/: restart-rtdb.sh
